# VectorDB_Tools

./: .env.example  .gitignore  LICENSE  README.md  app.py  requirements.txt
app/: app.py  app1.py  config.py  data_processor.py  database.py  milvus_uploader.py  models.py  schema_manager.py  vectorizer.py
backend/: .env.example  README.md  generate-keys.sh  main.py  pyproject.toml  test_api_fix.py  test_validate_api_key.py
backend/alembic/: env.py
backend/alembic/versions/: 1e8483238d41_change_milvusconnection_model_v2.py  3bca42321089_change_milvus_connections.py  40f3ad84743f_create_users_table.py  60fcbb3ded14_add_api_key_model.py  86463602f88e_change_milvusconnection_model_v3.py  b80e0fb26428_add_api_key_test_data.py  d8ee478a8d64_change_milvusconnection_model.py  eb3d5841f1f9_add_milvusconnection_model.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/auth/: router.py
backend/app/api/v1/endpoints/connections/: __init__.py  router.py
backend/app/api/v1/endpoints/keys/: router.py
backend/app/core/: config.py  crypto.py  db.py  security.py
backend/app/crud/: api_key.py  milvus_connection.py  user.py
backend/app/llm_clients/: baidu_qianfan_client.py  base.py  factory.py  ollama_client.py  openai_client.py
backend/app/models/: __init__.py  api_key.py  base.py  milvus_connection.py  user.py
backend/app/schemas/: api_key.py  crypto.py  milvus_connection.py  user.py
backend/app/services/: api_key_service.py  embedding_service.py  milvus_connection_service.py
backend/test/: connect_to_supabase.py
config/: logging_config.py  (+1 more)
(+65 files in other folders)
