[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.4",
    "celery>=5.5.3",
    "cryptography>=45.0.6",
    "email-validator>=2.2.0",
    "fastapi>=0.116.1",
    "fastapi-static-digest>=1.1.0",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "httpx>=0.28.1",
    "ollama>=0.5.3",
    "openai>=1.102.0",
    "pandas>=2.3.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "pymilvus>=2.6.0",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]
